[tool.poetry]
name = "dormnet-tracker"
version = "0.1.0"
description = ""
authors = ["lin157644 <linxs1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
pyinstaller = "^4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
